@@ -16,6 +16,7 @@
 	- re-add --enable-posixmutexes to build.
 	- fix: set fcontext from pkg when file_contexts doesn't exist (#114040).
 	- fix: set fcontext for "mkdir -p" directories not in packages.
+	- fix: setfiles (aka rpmsx.c) dinna handle patterns correctly.
 
 4.2.1 -> 4.2.2:
 	- unify signal handling in librpmio, use condvar to deliver signal.
